# image-processor

./: .dockerignore  .gitignore  LICENSE  docker-compose.yaml
.devcontainer/: devcontainer.json  docker-compose.yaml  post_create.sh
app/: main.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  ResultPage.tsx  StartPage.tsx  main.tsx  styles.css
